padding removed(was a blunder for responsiveness), more elegant carousel implemented for index(needs details of the products)

--- a/public/todo.txt
+++ b/public/todo.txt
@@ -5,3 +5,4 @@
 5. dashboard page maybe cart and favourites last orders personal details(card details address details billing details) etc
 6. for admins (dashboard) last edited products desc by updated or created date
 7. email verification should be implemented
+8. carousel arrows responding keyboard(can be good for mobile swiping)
