Started designing dashboard page-mini nav added

--- a/public/todo.txt
+++ b/public/todo.txt
@@ -1,5 +1,5 @@
 1. fix height for carousel in main page or even all products rolling in one carousel
-2. responsiveness!!!
++2. responsiveness!!!
 3. cart page
 4. payment implementation
 5. dashboard page maybe cart and favourites last orders personal details(card details address details billing details) etc
