--- a/public/todo.txt
+++ b/public/todo.txt
@@ -9,4 +9,5 @@
 9. Admin dashboard controller can have a detailed search 
 10. search validation, other validation?(bootstrap??php&html)
 11. Guest should be redirected to login when clicked on fav or add to cart
-12. add to favourites and cart should give  a feedback.
+12. add to favourites and cart should give a feedback.
++13. sale price needeed in fav and cart page
